fix: 移除无文本内容面包屑项与图标的间距 | Removes the spacing between the textless content breadcrumb item and the icon.

--- a/style/module/panel-editor.less
+++ b/style/module/panel-editor.less
@@ -63,6 +63,13 @@
                     max-width: none;
                 }
             }
+
+            .protyle-breadcrumb__text {
+                &:empty {
+                    /* 无内容的面包屑项 */
+                    margin-left: 0;
+                }
+            }
         }
     }
 
